divide tests to parameterized, non-parameterized and negative